--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "veritas-ai-detector",
+  "name": "veritas",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,7 +14,8 @@
     "@google/genai": "^1.34.0",
     "recharts": "^3.6.0",
     "lucide-react": "^0.562.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "pdfjs-dist": "4.8.69"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
